<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!-- ImageView para el icono de la app -->
    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icono_de_la_app"
        android:padding="160dp"
        android:src="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="email"
        android:inputType="textEmailAddress"
        android:text="@string/email_str"
        android:drawableStart="@android:drawable/sym_action_email"
        android:layout_marginBottom="10dp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/password_str"
        android:drawableStart="@android:drawable/ic_lock_lock"
        tools:ignore="LabelFor" />

    <CheckBox
        android:id="@+id/remember_me_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_me_str"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_str" />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_str"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:clickable="true"
        android:focusable="true"/>



</LinearLayout>