<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <!-- Botón para abrir la actividad de GPS -->
    <Button
        android:id="@+id/openGPSActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GPS_activity"
        android:backgroundTint="@color/dark_blue"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <!-- Botón de pánico -->
    <Button
        android:id="@+id/panic_btn"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/BotondelPanico"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:textSize="18sp" />


    <!-- Botón de cerrar sesión -->
    <Button
        android:id="@+id/logOutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_str"
        android:backgroundTint="@color/dark_blue"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

</LinearLayout>
